<resources>
    <string name="app_name">Dolpy</string>
    <string name="email_address">Enter Email Address</string>
    <string name="Password">Enter your Password</string>
    <string name="phoneNum">no hp mu</string>
    <string name="login">Login</string>
    <string name="Register">REGISTER</string>
    <string name="signout">SignOut</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_landing_page">LandingPage</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_hamburger_menu">HamburgerMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="pref_previously_started">true</string>

    <string name="add_task"><u>Add task...</u></string>
</resources>