<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F3F3F3"
    android:paddingTop="30dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="62dp">

        <ImageView
            android:id="@+id/LogoApp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:src="@drawable/asset_4" />

        <TextView
            android:id="@+id/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/LogoApp"
            android:fontFamily="@font/sourcesanspro_bold"
            android:text="@string/app_name"
            android:textColor="@color/primary_50"
            android:textSize="36sp"
            android:textStyle="bold"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/logInLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginHorizontal="24dp"
        android:padding="24dp"
        android:layout_marginTop="92dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rgb_blue10_32"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tvLogIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/rgb_blue_20"
                android:fontFamily="@font/sourcesanspro_semibold"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold|normal" />

            <TextView
                android:id="@+id/toRegisterbtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/sourcesanspro_bold"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:paddingRight="15dp"
                android:paddingBottom="5dp"
                android:text="@string/Register"
                android:textAlignment="center"
                android:textColor="@color/primary_50"
                android:textSize="16sp"
                android:textStyle="bold|normal" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textColor="@color/neutral_70"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/EmailForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/border_login"
            android:fontFamily="@font/sourcesanspro_regular"
            android:hint="@string/email_address"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="Password"
            android:textSize="16sp"
            android:textColor="@color/neutral_70" />

        <EditText
            android:id="@+id/PasswordForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/border_login"
            android:fontFamily="@font/sourcesanspro_regular"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="Forgot Password?"
            android:textAlignment="textEnd"
            android:textColor="@color/neutral_90"
            android:textSize="12sp"
            android:textStyle="normal" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Loginbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/rgb_blue_10"
            android:gravity="center"
            android:fontFamily="@font/sourcesanspro_semibold"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/errormsglog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="error"
            android:textSize="16sp"
            android:textColor="#FF0000"
            android:gravity="center"
            android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>