<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F3F3F3"
    tools:context=".LoginActivity"
    android:paddingTop="30dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="62dp">

        <ImageView
            android:id="@+id/LogoApp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:padding="8dp"
            android:src="@drawable/asset_4" />

        <TextView
            android:id="@+id/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/LogoApp"
            android:fontFamily="@font/sourcesanspro_bold"
            android:text="@string/app_name"
            android:textColor="@color/primary_50"
            android:textSize="36sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/logInLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginHorizontal="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rgb_blue10_32"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="7dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/toLoginbtn2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/sourcesanspro_semibold"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:paddingRight="15dp"
                android:paddingBottom="5dp"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/primary_50"
                android:textSize="18sp"
                android:textStyle="bold|normal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/rgb_blue_20"
                android:fontFamily="@font/sourcesanspro_semibold"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/Register"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold|normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginRight="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="First Name"
                    android:textSize="16sp"
                    android:textColor="@color/neutral_70"
                    android:fontFamily="@font/sourcesanspro_regular"/>

                <EditText
                    android:id="@+id/firstNameRegisForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/border_login"
                    android:fontFamily="@font/sourcesanspro_regular"
                    android:hint="Enter Your Name"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginLeft="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Last Name"
                    android:textSize="16sp"
                    android:textColor="@color/neutral_70"
                    android:fontFamily="@font/sourcesanspro_regular"/>

                <EditText
                    android:id="@+id/lastNameRegisForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/border_login"
                    android:fontFamily="@font/sourcesanspro_regular"
                    android:hint="Enter Your Name"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/sourcesanspro_regular"
            android:textColor="@color/neutral_70"
            android:text="Phone Number"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/PhoneRegisFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/border_login"
            android:fontFamily="@font/sourcesanspro_regular"
            android:hint="Enter Your Phone Number"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro_regular"
            android:textColor="@color/neutral_70"
            android:text="Email"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/EmailRegisForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/border_login"
            android:fontFamily="@font/sourcesanspro_regular"
            android:hint="Enter Your Email"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/neutral_70"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="Password"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/PasswordRegisForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/border_login"
            android:fontFamily="@font/sourcesanspro_regular"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Registerbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/rgb_blue_10"
            android:gravity="center"
            android:text="@string/Register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/sourcesanspro_semibold"/>
        <TextView
            android:id="@+id/errormsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="#FF0000"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="Error message"
            android:textSize="16sp"
            android:gravity="center"
            android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>